--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-Hello my nsme is Ira!
+Hello my name is Ira!
 
   </body>
 </html>
